DE/8week/정답지/Q9/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realestate-홍길동
  labels:
    student: 홍길동
    week: "8"
