DE/8week/정답지/Q9/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realestate-svc
  namespace: realestate-홍길동
spec:
  type: NodePort
  selector:
    app: realestate-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
