DE/8week/정답지/Q9/k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realestate-ingress
  namespace: realestate-홍길동
spec:
  ingressClassName: traefik
  rules:
    - host: realestate-홍길동.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realestate-svc
                port:
                  number: 80
